argocd-managed/docker-private-registry/Deployment.docker-private-registry.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-private-registry
  namespace: apps
  labels:
    app: docker-private-registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docker-private-registry
  template:
    metadata:
      labels:
        app: docker-private-registry
    spec:
      containers:
      - name: app
        image: registry:2
        ports:
        - containerPort: 5000
