argocd-managed/docker-private-registry/Service.docker-private-registry.yaml
apiVersion: v1
kind: Service
metadata:
  name: docker-private-registry
  namespace: apps
spec:
  selector:
    app: docker-private-registry
  ports:
  - port: 5000
    targetPort: 5000
