argocd-managed/docker-private-registry/Ingress.docker-private-registry.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: docker-private-registry
annotations:
 nginx.ingress.kubernetes.io/proxy-body-size: 1g
spec:
 rules:
   - host: docker-private-registry.my-minikube.com
     http:
       paths:
         - path: /
           pathType: Prefix
           backend:
             service:
               name: docker-private-registry
               port:
                 number: 5000
